--- a/home.html
+++ b/home.html
@@ -163,18 +163,35 @@
   <!-- Explore Inns -->
   <section>
     <h2>Explore Our Inns</h2>
-    <div class="pubs">
-      <div class="pub-card">
-        <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?auto=format&fit=crop&w=800&q=80" alt="The Lamb Inn">
-        <h3>The Lamb Inn</h3>
-        <p>Nomansland</p>
-      </div>
-      <div class="pub-card">
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=800&q=80" alt="The Royal Oak">
-        <h3>The Royal Oak</h3>
-        <p>Hilltop</p>
-      </div>
-      <!-- Repeat for the other 5 pubs -->
+    <div class="pubs-grid">
+      <a class="pub-tile" href="boldforester.html">
+        <img src="bold-forester-images/Restaurant Images/boldforestermain.jpg" alt="The Bold Forester">
+        <span>The Bold Forester</span>
+      </a>
+      <a class="pub-tile" href="lambinn.html">
+        <img src="Lamb-Inn-images/LambInn.jpg" alt="The Lamb Inn">
+        <span>The Lamb Inn</span>
+      </a>
+      <a class="pub-tile" href="royaloak.html">
+        <img src="Royal-Oak-images/The Royal Oak.jpeg" alt="The Royal Oak">
+        <span>The Royal Oak</span>
+      </a>
+      <a class="pub-tile" href="woolpack.html">
+        <img src="Woolpack-images/Woolpack.jpg" alt="The Woolpack">
+        <span>The Woolpack</span>
+      </a>
+      <a class="pub-tile" href="fightingcocks.html">
+        <img src="Fighting-Cocks-images/fighting-coq-scaled.jpg" alt="The Fighting Cocks">
+        <span>The Fighting Cocks</span>
+      </a>
+      <a class="pub-tile" href="trustyservant.html">
+        <img src="Trusty-Servant-images/Trusty.jpg" alt="The Trusty Servant">
+        <span>The Trusty Servant</span>
+      </a>
+      <a class="pub-tile" href="newforestinn.html">
+        <img src="New-Forest-Inn-images/NFI.jpg" alt="The New Forest Inn">
+        <span>The New Forest Inn</span>
+      </a>
     </div>
   </section>
 
