--- a/home.html
+++ b/home.html
@@ -198,9 +198,9 @@
     </div>
   </section>
 
-  <!-- Explore Inns -->
+  <!-- Explore Our Pubs -->
   <section>
-    <h2>Explore Our Inns</h2>
+    <h2>Explore Our Pub Family</h2>
     <div class="pubs-grid">
       <a class="pub-tile" href="boldforester.html">
         <img src="bold-forester-images/Restaurant Images/boldforestermain.jpg" alt="The Bold Forester">
