--- a/boldforester.html
+++ b/boldforester.html
@@ -169,14 +169,14 @@
   <h2>Events</h2>
   <div class="card-grid">
     <div class="card">
-      <img src="events/event1.jpg" alt="Quiz Night">
-      <h3>Quiz Night</h3>
-      <p>Join us for a fun evening of trivia every Thursday at 7:30pm.</p>
+      <img src="events/event1.jpg" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
+      <h3>Italian Week</h3>
+      <p>Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics, from hand-stretched pizzas to rich pasta dishes, crafted with love and fresh, vibrant ingredients.</p>
     </div>
     <div class="card">
-      <img src="events/event2.jpg" alt="Live Music">
-      <h3>Live Music</h3>
-      <p>Enjoy local talent performing every last Friday of the month.</p>
+      <img src="events/event2.jpg" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
+      <h3>National Curry Week</h3>
+      <p>Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists, all simmered to perfection and served with fragrant rice.</p>
     </div>
   </div>
 
