--- a/boldforester.html
+++ b/boldforester.html
@@ -169,12 +169,12 @@
   <h2>Events</h2>
   <div class="card-grid">
     <div class="card">
-      <img src="events/event1.jpg" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
+      <img src="bold-forester-images/Events-Promotions/Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
       <h3>Italian Week</h3>
       <p>Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics, from hand-stretched pizzas to rich pasta dishes, crafted with love and fresh, vibrant ingredients.</p>
     </div>
     <div class="card">
-      <img src="events/event2.jpg" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
+      <img src="bold-forester-images/Events-Promotions/National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
       <h3>National Curry Week</h3>
       <p>Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists, all simmered to perfection and served with fragrant rice.</p>
     </div>
