--- a/boldforester.html
+++ b/boldforester.html
@@ -198,9 +198,11 @@
   <!-- Social Media Section -->
   <h2>Follow Us</h2>
   <div class="social-links">
-    <a href="https://www.facebook.com/theboldforester">Facebook</a>
-    <a href="https://www.instagram.com/theboldforester">Instagram</a>
-    <a href="https://www.tiktok.com/@theboldforester">TikTok</a>
+    <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/">Facebook</a>
+    <a href="https://www.instagram.com/the_bold_forester/">Instagram</a>
+    <a href="https://www.tiktok.com/@theboldforester_">TikTok</a>
+     <a href="https://twitter.com/ForesterBold">X</a>
+     <a href="https://www.linkedin.com/@theboldforester">Linkedin</a>
   </div>
 
   <h2>Extras</h2>
