--- a/boldforester.html
+++ b/boldforester.html
@@ -202,7 +202,7 @@
     <a href="https://www.instagram.com/the_bold_forester/">Instagram</a>
     <a href="https://www.tiktok.com/@theboldforester_">TikTok</a>
      <a href="https://twitter.com/ForesterBold">X</a>
-     <a href="https://www.linkedin.com/@theboldforester">Linkedin</a>
+     <a href="https://www.linkedin.com/company/the-bold-forester-new-forest/">Linkedin</a>
   </div>
 
   <h2>Extras</h2>
