--- a/boldforester.html
+++ b/boldforester.html
@@ -197,7 +197,7 @@
 
   <!-- Social Media Section -->
   <h2>Follow Us</h2>
-  <div class="social-scroll">
+  <div class="social-links">
     <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/">Facebook</a>
     <a href="https://www.instagram.com/the_bold_forester/">Instagram</a>
     <a href="https://www.tiktok.com/@theboldforester_">TikTok</a>
