--- a/boldforester.html
+++ b/boldforester.html
@@ -195,15 +195,30 @@
     </div>
   </div>
 
-  <!-- Social Media Section -->
-  <h2>Follow Us</h2>
-  <div class="social-links">
-    <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/">Facebook</a>
-    <a href="https://www.instagram.com/the_bold_forester/">Instagram</a>
-    <a href="https://www.tiktok.com/@theboldforester_">TikTok</a>
-     <a href="https://twitter.com/ForesterBold">X</a>
-     <a href="https://www.linkedin.com/company/the-bold-forester-new-forest/">Linkedin</a>
-  </div>
+ <!-- Social Media Section -->
+<h2>Follow Us</h2>
+<div class="social-scroll">
+  <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/" class="social-card">
+    <img src="icons/facebook.png" alt="Facebook">
+    <span>Facebook</span>
+  </a>
+  <a href="https://www.instagram.com/the_bold_forester/" class="social-card">
+    <img src="icons/instagram.png" alt="Instagram">
+    <span>Instagram</span>
+  </a>
+  <a href="https://www.tiktok.com/@theboldforester_" class="social-card">
+    <img src="icons/tiktok.png" alt="TikTok">
+    <span>TikTok</span>
+  </a>
+  <a href="https://twitter.com/ForesterBold" class="social-card">
+    <img src="icons/x.png" alt="X (Twitter)">
+    <span>X</span>
+  </a>
+  <a href="https://www.linkedin.com/company/the-bold-forester-new-forest/" class="social-card">
+    <img src="icons/linkedin.png" alt="LinkedIn">
+    <span>LinkedIn</span>
+  </a>
+</div>
 
   <h2>Extras</h2>
   <div class="buttons">
