--- a/boldforester.html
+++ b/boldforester.html
@@ -165,20 +165,62 @@
     <a href="bold-forester-images/bold-forester-menus/cocktail-menu/Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
 
-  <!-- Events Section -->
-  <h2>Events</h2>
-  <div class="card-grid">
-    <div class="card">
-      <img src="bold-forester-images/Events-Promotions/Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
-      <h3>Italian Week</h3>
-      <p>Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics, from hand-stretched pizzas to rich pasta dishes, crafted with love and fresh, vibrant ingredients.</p>
-    </div>
-    <div class="card">
-      <img src="bold-forester-images/Events-Promotions/National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
-      <h3>National Curry Week</h3>
-      <p>Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists, all simmered to perfection and served with fragrant rice.</p>
-    </div>
+ <!-- Events Section -->
+<h2>Events</h2>
+<div class="card-grid">
+  <div class="card">
+    <img src="bold-forester-images/Events-Promotions/Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
+    <h3>Italian Week</h3>
+    <p>
+      Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics, from hand-stretched pizzas to rich pasta dishes, crafted with love and fresh, vibrant ingredients.
+    </p>
   </div>
+  <div class="card">
+    <img src="bold-forester-images/Events-Promotions/National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
+    <h3>National Curry Week</h3>
+    <p>
+      Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists, all simmered to perfection and served with fragrant rice.
+    </p>
+  </div>
+</div>
+
+<style>
+  .card-grid {
+    display: flex;
+    flex-direction: column;   /* stack cards vertically */
+    align-items: center;      /* center horizontally */
+    gap: 1.5rem;
+    margin-top: 1rem;
+  }
+
+  .card {
+    background: #2e472e;
+    border-radius: 12px;
+    padding: 1rem;
+    max-width: 400px;        /* keeps cards at a nice width */
+    width: 100%;
+    text-align: center;      /* center text inside */
+  }
+
+  .card img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 1rem;
+  }
+
+  .card h3 {
+    margin: 0.5rem 0;
+    color: #e6d8b5;
+  }
+
+  .card p {
+    color: #f4f4f4;
+    font-size: 0.95rem;
+    line-height: 1.5;
+  }
+</style>
+
 
   <!-- Promotions Section -->
   <h2>Promotions</h2>
