--- a/boldforester.html
+++ b/boldforester.html
@@ -70,65 +70,38 @@
       background: #4f7c4f;
     }
 
-    /* Cards layout for Events, Promotions, Social */
-    .card-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      margin: 1.5rem 0;
-      padding: 0 1rem;
+    /* Social scroll */
+    .social-scroll {
+      display: flex;
+      overflow-x: auto;
+      gap: 1rem;
+      padding: 1rem 0;
+      scroll-snap-type: x mandatory;
+      -webkit-overflow-scrolling: touch;
     }
 
-    .card {
-      background: #3c5a3c;
-      border-radius: 10px;
+    .social-scroll::-webkit-scrollbar {
+      display: none;
+    }
+
+    .social-card {
+      flex: 0 0 auto;
+      min-width: 150px;
       padding: 1rem;
       text-align: center;
-      transition: transform 0.2s;
-    }
-
-    .card:hover {
-      transform: translateY(-5px);
-    }
-
-    .card img {
-      max-width: 100%;
-      height: 140px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 0.5rem;
-    }
-
-    .card h3 {
-      color: #e6d8b5;
-      margin: 0.5rem 0;
-    }
-
-    .card p {
-      font-size: 0.9rem;
-    }
-
-    /* Social icons */
-    .social-links {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 1rem;
-    }
-
-    .social-links a {
-      display: inline-block;
-      background: #e6d8b5;
-      color: #2e472e;
-      font-weight: bold;
+      background: #f9f9f9;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       text-decoration: none;
-      padding: 0.6rem 1rem;
-      border-radius: 6px;
-      transition: background 0.3s;
+      color: #333;
+      font-weight: bold;
+      scroll-snap-align: start;
+      transition: transform 0.2s ease, background 0.2s ease;
     }
 
-    .social-links a:hover {
-      background: #fff2cc;
+    .social-card:hover {
+      transform: translateY(-3px);
+      background: #ececec;
     }
 
     footer {
@@ -165,121 +138,22 @@
     <a href="bold-forester-images/bold-forester-menus/cocktail-menu/Cocktail-Menu-2025.html">Cocktail Menu</a>
   </div>
 
- <!-- Events Section -->
-<h2>Events</h2>
-<div class="card-grid">
-  <div class="card">
-    <img src="bold-forester-images/Events-Promotions/Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
-    <h3>Italian Week</h3>
-    <p>
-      Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
-    </p>
-  </div>
-  <div class="card">
-    <img src="bold-forester-images/Events-Promotions/National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
-    <h3>National Curry Week</h3>
-    <p>
-      Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
-    </p>
-  </div>
-</div>
-
-<style>
-  .card-grid {
-    display: flex;
-    flex-direction: column;   /* stack cards vertically */
-    align-items: center;      /* center horizontally */
-    gap: 1.5rem;
-    margin-top: 1rem;
-  }
-
-  .card {
-    background: #2e472e;
-    border-radius: 12px;
-    padding: 1rem;
-    max-width: 400px;        /* keeps cards at a nice width */
-    width: 100%;
-    text-align: center;      /* center text inside */
-  }
-
-  .card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 1rem;
-  }
-
-  .card h3 {
-    margin: 0.5rem 0;
-    color: #e6d8b5;
-  }
-
-  .card p {
-    color: #f4f4f4;
-    font-size: 0.95rem;
-    line-height: 1.5;
-  }
-</style>
-
-  <!-- Promotions Section -->
-  <h2>Promotions</h2>
-  <div class="card-grid">
-    <div class="card">
-      <img src="promotions/promo1.jpg" alt="Burger Mondays">
-      <h3>Burger Mondays</h3>
-      <p>Buy any burger and get a free pint every Monday.</p>
-    </div>
-    <div class="card">
-      <img src="promotions/promo2.jpg" alt="Wine Wednesday">
-      <h3>Wine Wednesday</h3>
-      <p>20% off all bottles of wine, every Wednesday.</p>
-    </div>
+  <!-- Links to Events & Promotions -->
+  <h2>What’s On</h2>
+  <div class="buttons">
+    <a href="events.html">View Events</a>
+    <a href="promotions.html">View Promotions</a>
   </div>
 
- <!-- Social Media Section -->
-<h2>Follow Us</h2>
-<div class="social-scroll">
-  <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/" class="social-card">Facebook</a>
-  <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
-  <a href="https://www.tiktok.com/@theboldforester_" class="social-card">TikTok</a>
-  <a href="https://twitter.com/ForesterBold" class="social-card">X</a>
-  <a href="https://www.linkedin.com/company/the-bold-forester-new-forest/" class="social-card">LinkedIn</a>
-</div>
-
-<style>
-  .social-scroll {
-    display: flex;
-    overflow-x: auto;
-    gap: 1rem;
-    padding: 1rem 0;
-    scroll-snap-type: x mandatory;
-    -webkit-overflow-scrolling: touch;
-  }
-
-  .social-scroll::-webkit-scrollbar {
-    display: none; /* hide scrollbar */
-  }
-
-  .social-card {
-    flex: 0 0 auto;
-    min-width: 150px;
-    padding: 1rem;
-    text-align: center;
-    background: #f9f9f9;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-    scroll-snap-align: start;
-    transition: transform 0.2s ease, background 0.2s ease;
-  }
-
-  .social-card:hover {
-    transform: translateY(-3px);
-    background: #ececec;
-  }
-</style>
+  <!-- Social Media Section -->
+  <h2>Follow Us</h2>
+  <div class="social-scroll">
+    <a href="https://www.facebook.com/p/The-Bold-Forester-New-Forest-100063726363407/" class="social-card">Facebook</a>
+    <a href="https://www.instagram.com/the_bold_forester/" class="social-card">Instagram</a>
+    <a href="https://www.tiktok.com/@theboldforester_" class="social-card">TikTok</a>
+    <a href="https://twitter.com/ForesterBold" class="social-card">X</a>
+    <a href="https://www.linkedin.com/company/the-bold-forester-new-forest/" class="social-card">LinkedIn</a>
+  </div>
 
   <h2>Extras</h2>
   <div class="buttons">
