--- a/bold-forester-images/Events-Promotions/promotions.html
+++ b/bold-forester-images/Events-Promotions/promotions.html
@@ -109,7 +109,8 @@
     </div>
   </main>
 
- <div class="buttons">
-  <a href="../boldforester.html">⬅ Back to Pub Page</a>
-  <a href="../home.html">⬅ Back to Home</a>
+<div class="buttons">
+  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../home.html">⬅ Back to Home</a>
 </div>
+
