--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -113,7 +113,7 @@
     </div>
   </main>
 
- <div class="buttons">
-  <a href="../boldforester.html">⬅ Back to Pub Page</a>
-  <a href="../home.html">⬅ Back to Home</a>
+<div class="buttons">
+  <a href="../../boldforester.html">⬅ Back to Pub Page</a>
+  <a href="../../home.html">⬅ Back to Home</a>
 </div>
