--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -97,14 +97,14 @@
   <main>
     <div class="card-grid">
       <div class="card">
-        <img src="../Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
+        <img src="Italian Week 2025.png" alt="🍝 Italian Week at The Bold Forester – 9th to 15th September">
         <h3>Italian Week</h3>
         <p>
           Celebrate the passion of Italy with a week full of authentic, flavour-packed Italian classics.
         </p>
       </div>
       <div class="card">
-        <img src="../National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
+        <img src="National Curry Week 2.png" alt="🌶️ National Curry Week at The Bold Forester – 6th to 12th October">
         <h3>National Curry Week</h3>
         <p>
           Spice up your week with a feast of bold, aromatic curries, from traditional favourites to exciting new twists.
