--- a/fightingcocks.html
+++ b/fightingcocks.html
@@ -129,6 +129,7 @@
     <a href="Fighting-Cocks-images/fighting-cocks-menus/sunday-menu/new-sunday-menu-march.html">Sunday Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/kids-menu/Kids-menu.html">Kids Menu</a>
     <a href="Fighting-Cocks-images/fighting-cocks-menus/desserts-menu/Dessert-ice-cream-menu-march-2025.html">Desserts Menu</a>
+    <a href="Fighting-Cocks-images/fighting-cocks-menus/breakfast-menu/">Breakfast Menu</a>
   </div>
 
   <h2>Drink Menus</h2>
